    (which have been introduced in Automake 1.11.2).

  - The exact order in which the directories in the aclocal macro
    search path are looked up is probably going to be changed in the
    next Automake release (1.13).

* New supported languages:

  - Support for Objective C++ has been added; it should work similarly to
    the support for Objective C.

* Deprecated obsolescent features:

  - Support for the "Cygnus-style" trees (enabled by the 'cygnus' option) is
    now deprecated (its use triggers a warning in the 'obsolete' category).
    It will be removed in the next major Automake release (1.13).

  - The long-obsolete (since 1.10) automake-provided $(mkdir_p) make
    variable, @mkdir_p@ configure-time substitution and AM_PROG_MKDIR
    m4 macro are deprecated, eliciting a warning in the 'obsolete'
    category.  They will be removed in the next major version (1.13).

Bugs fixed in 1.12.1:

* Bugs introduced by 1.12:

  - Several weaknesses in Automake's own build system and test suite
    have been fixed.

* Bugs introduced by 1.11.3:

  - When given non-option arguments, aclocal rejects them, instead of
    silently ignoring them.

* Long-standing bugs:

  - When the 'color-tests' option is in use, forcing of colored testsuite
    output through "AM_COLOR_TESTS=always" works even if the terminal is
    a non-ANSI one, i.e., if the TERM environment variable has a value of
    "dumb".

  - Several inefficiencies and poor performances in the implementation
    of the parallel-tests 'check' and 'recheck' targets have been fixed.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 1.12:

* Obsolete features removed:

  - The never documented nor truly used script 'acinstall' has been
    removed.

  - Support for automatic de-ANSI-fication has been removed.

  - The support for the "obscure" multilib feature has been removed
    from Automake core (but remains available in the 'contrib/'