@@ -5409,6 +5409,10 @@ EOF
 	  $seen_init_automake = $where;
 	  if (defined $args[2])
 	    {
+              msg 'obsolete', $where, <<'EOF';
+AM_INIT_AUTOMAKE: two- and three-arguments forms are deprecated.  For more info, see:
+http://www.gnu.org/software/automake/manual/automake.html#Modernize-AM_INIT_AUTOMAKE-invocation
+EOF
 	      $package_version = $args[2];
 	      $package_version_location = $where;
 	    }
